[gd_scene load_steps=4 format=3 uid="uid://bgk7nmhhrqdp7"]

[ext_resource type="Script" path="res://modules/pause_menu/pause_menu.gd" id="1_3xt56"]
[ext_resource type="FontFile" uid="uid://dr43vf0re3mqw" path="res://assets/fonts/venice_classic/VeniceClassic.ttf" id="1_7lir2"]
[ext_resource type="Script" path="res://classes/ui/curtain.gd" id="3_xpmk3"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3xt56")
metadata/_tab_index = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.281359, 0.0706335, 0.0835989, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -98.0
offset_right = 204.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Text" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7lir2")
theme_override_font_sizes/font_size = 38
text = "<GAME NAME HERE>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Fullscreen" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7lir2")
theme_override_font_sizes/font_size = 38
text = "Fullscreen"

[node name="Start" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7lir2")
theme_override_font_sizes/font_size = 38
text = "Start Game"

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7lir2")
theme_override_font_sizes/font_size = 38
text = "Quit Game"

[node name="Curtain" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("3_xpmk3")

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
